# construction-supply-chain

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py  models.py  settings.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: risk-card.tsx
frontend/lib/: api.ts
