[project]
name = "construction-supply-chain-backend"
version = "0.1.0"
description = "FastAPI backend for the Autonomous Construction Supply Chain Brain."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
]

[tool.uv]
package = false

